# yazelix-zellij-bar

./: AGENTS.md  Cargo.toml  README.md  flake.nix
presets/: yazelix_runtime_bar.template.kdl  yazelix_zellij_bar.kdl
presets/examples/: custom_command_widgets.kdl  standalone_zellij_layout.kdl  yazelix_runtime_widgets.kdl
src/: appearance.rs  lib.rs
