[package]
name = "yazelix_zellij_bar"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Standalone Zellij bar plugin package from Yazelix"
license = "Apache-2.0"
repository = "https://github.com/luccahuguet/yazelix-zellij-bar"
readme = "README.md"
keywords = ["zellij", "zjstatus", "terminal", "tui", "yazelix"]
categories = ["command-line-utilities"]

[[bin]]
name = "yazelix_zellij_bar_widget"
path = "src/bin/yazelix_zellij_bar_widget.rs"

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"], optional = true }
serde_json = "1.0"

[features]
default = ["providers"]
providers = ["dep:rusqlite"]
